# engr-131-api

./: .dockerignore  .gitignore  .gitmodules  =1.13.2  Dockerfile  README.md  alembic.ini  build.sh  deploy.sh  fly.toml  generate_client_keypair.py  generate_server_keypair.py  k8s.yml  move_solutions.py  pyproject.toml  test.ipynb
.github/workflows/: docker-k8s.yml  docker.yml  fetch-solutions.yml  fetch_solutions.yml  update-lib.yml
alembic/: env.py
alembic/versions/: 00df6c33fe4d_add_tokens_table.py  01e014984cf4_submission.py  0aa52946ec1d_add_question_schema.py  111f487467cd_token_revision.py  24f3788928df_make_student_name_fields_optional.py  2dbb284ed385_do_some_stuff.py  301299aee630_token_revision.py  32c4fd5099e0_add_float_more.py  38b7c1cafba9_submission_schema.py  3ee2bbc1299b_add_execution_logs_table.py  440de3e60308_submission_schema.py  4c8b093174a9_token_revision.py  501abed1abc0_add_question_submission_table.py  51f9677469cb_add_key_used.py  564a8417314e_update_questions_table_schema.py  60acf6f75662_update_token.py  60bcb152299a_submission_schema.py  6496ecaa42bb_update_token.py  6a5414c3a291_do_some_stuff.py  71de2dbb22ba_add_column_for_updated_grades.py  7c90ba8de7c7_token_revision.py  8545478cfc11_submission_schema.py  94244c719ab1_notebook_schema.py  98de5794f14e_add_float.py  a0ab6b9b0eb3_submission.py  a91e72f619d0_add_due_date_extensions_table.py  bceb6537b636_miscellaneous_schema_updates.py  c7e1653d9db9_edit_table_name.py  cf1d57285cb1_notebook_schema.py  d4a03ada2bff_add_a_couple_indices.py  (+2 more)
app/: auth.py  crud_admin.py  crud_student.py  db.py  live_scorer.py  log_parser.py  main.py  models.py  parse.py  question.py  schemas.py  utils.py
k8s/: fastapi.yml
k8s-az/: 01-postgres.yml  03-fastapi.yml  fastapi.yml  postgres.yml
k8s-nautilus/: postgres.yml
(+62 files in other folders)
