[project]
name = "engr-131-api"
version = "0.1.0"
description = "TBD"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.14.1",
  "bcrypt>=4.2.1",
  "fastapi[standard]>=0.115.8",
  "psycopg2-binary>=2.9.10",
  "pynacl>=1.5.0",
  "python-dateutil>=2.9.0.post0",
]

[dependency-groups]
dev = ["mypy>=1.15.0", "ruff>=0.9.7", "types-python-dateutil>=2.9.0.20241206"]

[tool.mypy]
exclude = ["vendor"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
exclude = ["vendor"]
