[project]
name = "engr-131-api"
version = "0.1.0"
description = "TBD"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.16.2",
  "bcrypt>=4.3.0",
  "fastapi[standard]>=0.115.13",
  "psycopg2-binary>=2.9.10",
  "pynacl>=1.5.0",
  "python-dateutil>=2.9.0.post0",
]

[dependency-groups]
dev = [
  "mypy>=1.16.1",
  "pyright>=1.1.402",
  "ruff>=0.12.0",
  "ty>=0.0.1a11",
  "types-python-dateutil>=2.9.0.20250516",
]

[tool.mypy]
exclude = ["vendor"]

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = [".venv", "vendor"]

[tool.ruff]
exclude = ["vendor"]
